# clay

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .hgignore  .pylintrc  .travis.yml  .version  .version.ini  BankOfDeposit.py  BankOfDeposit.sol  Dockerfile  Lottery.sol  MANIFEST.in  README.md  README_ES.md  TODO.txt  agent.quote  appveyor.yml  circle.yml  codecov.yml  conftest.py  gateway-mock.py  golem.xml  golemapp.py  golemapp.spec  golemcli.py  golemcli.spec  golemgui.py  gu-gateway-mock.py  install.sh  keys.sealed  lint.sh  lintdiff.sh  logging.ini  loggingconfig.py  luxrender-output.exr  populus.ini  requirements-build.txt  requirements-build_to-freeze.txt  (+16 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  new-feature.md
apps/: appsmanager.py  entrypoint.sh  image_integrity.ini  images.ini  images_test.ini  registered.ini  registered_envs.ini  registered_envs_test.ini  registered_tasks.ini  registered_tasks_test.ini  registered_test.ini  shellentrypoint.sh
apps/dummy/: computing.py  (+1 more)
docker/: Dockerfile.gnr
docs/: ethereum_subsystem.md
gnr/: admmain.py  application.py  docker_environments.py  gnradmapplicationlogic.py  gnradmmain.py  gnrapplicationlogic.py  gnrstartapp.py  gnrtaskstate.py  infoserver.py  logging.ini  main.py  node.py  pluginclient.py  renderingadmapplicationlogic.py  renderingapplicationlogic.py  renderingdirmanager.py  renderingenvironment.py  renderingtaskstate.py  tasktype.py
golem/: CONCENT_TERMS.html  TERMS  TERMS.html  __init__.py  app_manager.py  appconfig.py  argsparser.py  bankconfig.py  client.py  clientconfigdescriptor.py  constants.py  crypto.py  database.py  decorators.py  eth.py  genesis_golem.json  gugateway.py  model.py  monitorconfig.py  node.py  p2pconfig.py  report.py  terms.py  testutils.py  testutils_app_integration.py  utils.py  version.py
gui/: application.py  applicationlogic.py  gnrapplicationlogic.py  guidirmanager.py  main.py  node.py  renderingapplicationlogic.py  startapp.py  startgui.py
openapi/: client-api-doc.html  openapi.yaml  swagger.yaml
poc/: todo.txt
rust/golem/: Cargo.toml
rust/golem/core/network/: Cargo.toml
rust/golem/core/network-controller/: Cargo.toml
rust/golem/core/network-controller/src/: controller.rs  error.rs  event.rs  lib.rs  message.rs
rust/golem/core/network-controller/src/codec/: error.rs  mod.rs  serde.rs
rust/golem/core/network-libp2p/: Cargo.toml
rust/golem/core/network-libp2p/src/: behaviour.rs  lib.rs  service.rs  transport.rs
rust/golem/core/network-libp2p/src/behaviour/: debug_info.rs
rust/golem/core/network-libp2p/src/custom_proto/: behaviour.rs  handler.rs  upgrade.rs
rust/golem/core/network-libp2p/src/peers/: manager.rs
rust/golem/core/network-libp2p/tests/: test.rs
rust/golem/core/network-protocol/: Cargo.toml
rust/golem/core/network-protocol-derive/: Cargo.toml
rust/golem/core/network-protocol-derive/src/: lib.rs
rust/golem/core/network-protocol/src/: behaviour.rs  lib.rs  message.rs  protocol.rs
rust/golem/core/network-protocol/src/custom_proto/: behaviour.rs  handler.rs  mod.rs  upgrade.rs
rust/golem/core/network/src/: controller.rs  error.rs  event.rs  lib.rs  message.rs  peer.rs
rust/golem/core/network/src/codec/: error.rs  serde.rs
rust/golem/core/peerset/: Cargo.toml
rust/golem/core/peerset/src/: lib.rs
rust/golem/src/: lib.rs  logger.rs  marketplace.rs
rust/golem/src/bindings/: marketplace.rs  mod.rs  net.rs
rust/golem/src/net/: convert.rs  event.rs  mod.rs  runtime.rs  service.rs  util.rs
rust/golem/src/os/: error.rs  mod.rs  windows.rs
rust/golem/src/python/: convert.rs  error.rs  mod.rs
save/: testtask_template
scripts/: Dockerfile.base  Dockerfile.blender  Dockerfile.luxrender  blender2docker.py  blendercrop.py  blenderparts.py  blenderstats.py  broadcast-helper.py  clean-docker-vm.ps1  create-share.ps1  create-vnet-switch.ps1  docker_stats_poc.py  get-ip-address.ps1  get-slow-argument.py  json2pickle.py  makepackage.py  maketestgt.py  pickle2json.py  prepare-docker-for-windows.ps1  resparser.py  rpcevents.py  run-as-admin.ps1  tempdir.py  test-concent.py  test-daemon-start.ps1  test-daemon-start.sh  test-daemon-stop.ps1  test-daemon-stop.sh  test-fill-nodeskeeper.py
setup/: setup_commons.py  taskcollector_builder.py
setup_util/: setup_commons.py  taskcollector_builder.py
tests/: conftest.py  test_bankofdeposit.py  test_clientconfigdescriptor.py  test_golemapp.py  test_logging.py  test_utils.py
tests_dist/: ExpectLines.py  ProcTestFixture.py  README.md  lib.py  runner.py
testtasks/: dir_hash_builder.py  execution_time_measure.py
tools/: Dockerfile.gnr  build-images.sh  golem.nsi
(+2924 files in other folders)
