[package]
name = "pyext-golem"
version = "0.2.0"
authors = ["Golem Tech <tech@golem.network>"]
edition = "2018"

[lib]
name = "golem"
crate-type = ["cdylib"]

[workspace]
members = [
    "core/network-controller",
    "core/network-libp2p",
    "core/network-protocol",
]

[dependencies]
crossbeam-channel = "0.3"
env_logger = "0.6"
futures = "0.1.17"
lazy_static = "1.3"
log = "0.4"
parking_lot = "0.8.0"
secp256k1 = "0.12"
tokio = "0.1"
tokio-executor = "0.1"

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]

[dependencies.network-controller]
path = "core/network-controller"

[dependencies.libp2p]
version = "0.9.1"
default-features = false
features = ["secp256k1", "libp2p-websocket"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }
