[package]
name = "network-controller"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
authors = ["Golem Tech <tech@golem.network>"]

[lib]

[dependencies]
bincode = "1.1"
byteorder = "1.3"
bytes = "0.4"
crossbeam-channel = "0.3"
lazy_static = "1.3"
log = "0.4"
parking_lot = "0.8.0"
error-chain = "0.12"
bitflags = "1.0"
futures = "0.1.17"
linked-hash-map = "0.5"
linked_hash_set = "0.1"
lru-cache = "0.1.1"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
tokio-codec = "0.1.1"

[dependencies.network_libp2p]
package = "network-libp2p"
path = "../network-libp2p"
