[package]
license = "GPL-3.0"
name = "network-libp2p"
version = "0.1.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Golem Tech <tech@golem.network>",
]
edition = "2018"

[lib]

[dependencies]
byteorder = "1.3"
bytes = "0.4"
error-chain = { version = "0.12", default-features = false }
fnv = "1.0"
futures = "0.1"
parking_lot = "0.8.0"
lazy_static = "1.3"
libp2p = { version = "0.9.1", default-features = false, features = ["secp256k1", "libp2p-websocket"] }
log = "0.4"
parity-multiaddr = "0.5.0"
rand = "0.6"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
smallvec = "0.6"
peerset = { path = "../peerset" }
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
unsigned-varint = { version = "0.2.1", features = ["codec"] }
void = "1.0"
zeroize = "0.6.0"

slog = { version = "^2", features = ["nested-values"] }
slog_derive = "0.1.1"
erased-serde = "0.3.9"

[dev-dependencies]
tempdir = "0.3"

