[package]
name = "network-protocol"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Golem Tech <tech@golem.network>",
]

[lib]

[dependencies]
bytes = "0.4"
fnv = "1.0"
futures = "0.1"
parking_lot = "0.8.0"
log = "0.4"
rand = "0.6"
slog = { version = "^2", features = ["nested-values"] }
smallvec = "0.6"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
unsigned-varint = { version = "0.2.1", features = ["codec"] }
void = "1.0"

[dependencies.libp2p]
version = "0.9.1"
default-features = false
features = ["secp256k1", "libp2p-websocket"]
